# keep-moving-usgarbot

./: .gitignore  CMakeLists.txt  map-rebuilder.sh  rebuilder.sh  test.tmx
assets/: donMeowth.map  mrPresident.map  test.map
src/: Box2.hpp  CMakeLists.txt  Collisions.cpp  Collisions.hpp  Coordinates.hpp  Entity.hpp  EntityBehavior.cpp  EntityBehaviorTypes.inc  FixedString.hpp  FixedVector.hpp  Framebuffer.hpp  GameInterface.hpp  GameLogic.cpp  GameLogic.hpp  HostInterface.hpp  Image.hpp  Main.cpp  Map.hpp  MapFile.hpp  MapTransientState.hpp  MemoryZone.hpp  Ray2.hpp  Renderer.cpp  Renderer.hpp  Scalar.hpp  SoundSample.hpp  TileSet.cpp  TileSet.hpp  Vector2.hpp
src-assets/: DonMeowth.tx  Goal.tx  Medkit.tx  PatrolDog.tx  PatrolHumanoid.tx  PatrolRebelDog.tx  Player.tx  SentryDog.tx  SentryHumanoid.tx  SentryRebelDog.tx  donMeowth.tmx  mrPresident.tmx  test.tmx  tileset.tsx
